--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>foodParadise</title>
     <link rel="stylesheet" href="style.css">
     <link href='https://cdn.boxicons.com/fonts/basic/boxicons.min.css' rel='stylesheet'>
+    <link rel="icon" href="./food-img/icon.png">
 </head>
 
 <body id="page-container">
