--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="style.css">
     <link href='https://cdn.boxicons.com/fonts/basic/boxicons.min.css' rel='stylesheet'>
     <link rel="icon" href="./food-img/icon.png">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
 </head>
 
 <body id="page-container">
@@ -166,24 +168,56 @@
     </section>
 
     <footer>
-        <ul>
-            <li>Contact</li>
-            <li>091-3185-3151</li>
-            <li>Ndiaga Amechi Awkunanaw</li>
-            <li>hillsdev22.co.ng</li>
-            </div>
-            <ul>
-                <li>Navigate</li>
-                <li>home</li>
+    <!-- Contact Section -->
+    <div class="footer-section contact-info">
+      <h3>Contact</h3>
+      <ul>
+        <li><i class="fas fa-phone"></i> 091-3185-3151</li>
+        <li><i class="fas fa-user"></i> Ndiaga Amechi Awkunanaw</li>
+        <li><i class="fas fa-globe"></i> <a href="http://hillsdev22.co.ng" target="_blank">hillsdev22.co.ng</a></li>
+      </ul>
+    </div>
 
-            </ul>
-            <div>
-                <li>Menu</li>
-            </div>
-            <div>
-                <li>Follow Us</li>
-            </div>
-    </footer>
+    <!-- Navigation -->
+    <div class="footer-section">
+      <h3>Navigate</h3>
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Services</a></li>
+        <li><a href="#">Portfolio</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </div>
+
+    <!-- Menu / Links -->
+    <div class="footer-section">
+      <h3>Menu</h3>
+      <ul>
+        <li><a href="#">Privacy Policy</a></li>
+        <li><a href="#">Terms of Service</a></li>
+        <li><a href="#">Support</a></li>
+        <li><a href="#">FAQ</a></li>
+      </ul>
+    </div>
+
+    <!-- Social Media -->
+    <div class="footer-section">
+      <h3>Follow Us</h3>
+      <div class="social-links">
+        <a href="#"><i class="fab fa-facebook"></i></a>
+        <a href="#"><i class="fab fa-twitter"></i></a>
+        <a href="#"><i class="fab fa-instagram"></i></a>
+        <a href="#"><i class="fab fa-linkedin"></i></a>
+        <a href="#"><i class="fab fa-github"></i></a>
+      </div>
+    </div>
+
+    <!-- Footer Bottom Text -->
+    <div class="footer-bottom">
+      &copy; 2025 hillsdev22. All rights reserved.
+    </div>
+  </footer>
 
     <script src="script.js"></script>
 </body>
