--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
     <section id="cart-items-container" class="cart-items-container">
         <header>
-            <h3>Shopping Cart</h3>
+            <h3 class="cart-title">Shopping Cart</h3>
         </header>
         <div id="cart-items-wrapper">
 
