--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
       <ul>
         <li><i class="fas fa-phone"></i> 091-3185-3151</li>
         <li><i class="fas fa-user"></i> Ndiaga Amechi Awkunanaw</li>
-        <li><i class="fas fa-globe"></i> <a href="http://hillsdev22.co.ng" target="_blank">hillsdev22.co.ng</a></li>
+        <li><i class="fas fa-globe"></i> <a href="http://hillsdev22.co.ng" target="_blank">danibrainy94@gmail.com</a></li>
       </ul>
     </div>
 
