--- a/index.html
+++ b/index.html
@@ -57,22 +57,13 @@
     </section>
 
     <section id="cart-items-container" class="cart-items-container">
-        <header>
-            <h3 class="cart-title">Shopping Cart</h3>
-        </header>
-        <div id="cart-items-wrapper">
-            
-        </div>
+        <div id="cart-items-wrapper"></div>
 
         <!-- <button class="cart-btn checkout-btn">Checkout</button> -->
-
         <div class="cart-control-container">
             <button class="cart-btn-clear">Clear cart</button>
             <button class="cart-btn-close">Close cart</button>
         </div>
-
-
-
     </section>
 
 
