--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href='https://cdn.boxicons.com/fonts/basic/boxicons.min.css' rel='stylesheet'>
     <link rel="icon" href="./food-img/icon.png">
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 </head>
 
 <body id="page-container">
@@ -127,91 +127,93 @@
 
         <div class="chef-area-wrapper">
 
-            <div class="chef-element">
+            <button class="left-chef-btn"><i class='bx  bx-chevron-left-circle'></i> </button>
+            <div class="chef-element-wrapper">
+                <div class="chef-element">
                 <img src="./food-img/chef1.png" alt="">
-                <div>
-                    <h3>Chef Name</h3>
-                    <p class="chef-info"> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Esse officiis dolore harum error
-                        distinctio placeat quae ut aliquam sunt maiores!</p>
-                </div>
-            </div>
+                <div class="chef-profile">
+                    <h1>Luca Moretti</h1>
+                    <p><strong>Nationality:</strong> Italian</p>
+                    <p><strong>Role:</strong> Executive Chef</p>
+                    <p><strong>Experience:</strong> 15+ years</p>
 
-            <div class="chef-element">
-                <img src="./food-img/chef2.png" alt="">
-                <div>
-                    <h3>Chef Name</h3>
-                    <p class="chef-info"> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Esse officiis dolore harum error
-                        distinctio placeat quae ut aliquam sunt maiores!</p>
-                </div>
-            </div>
+                    <section class="expertise">
+                        <h2>Expertise</h2>
+                        <p>Master of modern Mediterranean and Italian cuisine, blending tradition with innovation using
+                            seasonal, high-quality ingredients.</p>
+                    </section>
 
-            <div class="chef-element">
-                <img src="./food-img/chef3.jpg" alt="">
-                <div>
-                    <h3>Chef Name</h3>
-                    <p class="chef-info"> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Esse officiis dolore harum error
-                        distinctio placeat quae ut aliquam sunt maiores!</p>
+                    <section class="style">
+                        <h2>Style</h2>
+                        <p>Creative, elegant, and flavor-driven dishes with refined presentation.</p>
+                    </section>
+
                 </div>
             </div>
+            
+            </div>
+            <button class="right-chef-btn"><i class='bx  bx-chevron-right-circle'></i> </button>
+
+
 
 
         </div>
     </section>
 
     <footer>
-    <!-- Contact Section -->
-    <div class="footer-section contact-info">
-      <h3>Contact</h3>
-      <ul>
-        <li><i class="fas fa-phone"></i> 091-3185-3151</li>
-        <li><i class="fas fa-user"></i> Ndiaga Amechi Awkunanaw</li>
-        <li><i class="fas fa-globe"></i> <a href="http://hillsdev22.co.ng" target="_blank">danibrainy94@gmail.com</a></li>
-      </ul>
-    </div>
+        <!-- Contact Section -->
+        <div class="footer-section contact-info">
+            <h3>Contact</h3>
+            <ul>
+                <li><i class="fas fa-phone"></i> 091-3185-3151</li>
+                <li><i class="fas fa-user"></i> Ndiaga Amechi Awkunanaw</li>
+                <li><i class="fas fa-globe"></i> <a href="http://hillsdev22.co.ng"
+                        target="_blank">danibrainy94@gmail.com</a></li>
+            </ul>
+        </div>
 
-    <!-- Navigation -->
-    <div class="footer-section">
-      <h3>Navigate</h3>
-      <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Services</a></li>
-        <li><a href="#">Portfolio</a></li>
-        <li><a href="#">Contact</a></li>
-      </ul>
-    </div>
+        <!-- Navigation -->
+        <div class="footer-section">
+            <h3>Navigate</h3>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Services</a></li>
+                <li><a href="#">Portfolio</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </div>
 
-    <!-- Menu / Links -->
-    <div class="footer-section">
-      <h3>Menu</h3>
-      <ul>
-        <li><a href="#">Privacy Policy</a></li>
-        <li><a href="#">Terms of Service</a></li>
-        <li><a href="#">Support</a></li>
-        <li><a href="#">FAQ</a></li>
-      </ul>
-    </div>
+        <!-- Menu / Links -->
+        <div class="footer-section">
+            <h3>Menu</h3>
+            <ul>
+                <li><a href="#">Privacy Policy</a></li>
+                <li><a href="#">Terms of Service</a></li>
+                <li><a href="#">Support</a></li>
+                <li><a href="#">FAQ</a></li>
+            </ul>
+        </div>
 
-    <!-- Social Media -->
-    <div class="footer-section">
-      <h3>Follow Us</h3>
-      <div class="social-links">
-        <a href="#"><i class="fab fa-facebook"></i></a>
-        <a href="#"><i class="fab fa-twitter"></i></a>
-        <a href="#"><i class="fab fa-instagram"></i></a>
-        <a href="#"><i class="fab fa-linkedin"></i></a>
-        <a href="#"><i class="fab fa-github"></i></a>
-      </div>
-    </div>
+        <!-- Social Media -->
+        <div class="footer-section">
+            <h3>Follow Us</h3>
+            <div class="social-links">
+                <a href="#"><i class="fab fa-facebook"></i></a>
+                <a href="#"><i class="fab fa-twitter"></i></a>
+                <a href="#"><i class="fab fa-instagram"></i></a>
+                <a href="#"><i class="fab fa-linkedin"></i></a>
+                <a href="#"><i class="fab fa-github"></i></a>
+            </div>
+        </div>
 
-    <!-- Footer Bottom Text -->
-    <div class="footer-bottom">
-      &copy; 2025 hillsdev22. All rights reserved.
-    </div>
-  </footer>
+        <!-- Footer Bottom Text -->
+        <div class="footer-bottom">
+            &copy; 2025 hillsdev22. All rights reserved.
+        </div>
+    </footer>
 
     <script src="script.js"></script>
 </body>
 
 </html>
-
