--- a/index.html
+++ b/index.html
@@ -130,27 +130,16 @@
             <button class="left-chef-btn"><i class='bx  bx-chevron-left-circle'></i> </button>
             <div class="chef-element-wrapper">
                 <div class="chef-element">
-                <img src="./food-img/chef1.png" alt="">
-                <div class="chef-profile">
-                    <h1>Luca Moretti</h1>
-                    <p><strong>Nationality:</strong> Italian</p>
-                    <p><strong>Role:</strong> Executive Chef</p>
-                    <p><strong>Experience:</strong> 15+ years</p>
-
-                    <section class="expertise">
-                        <h2>Expertise</h2>
-                        <p>Master of modern Mediterranean and Italian cuisine, blending tradition with innovation using
-                            seasonal, high-quality ingredients.</p>
-                    </section>
-
-                    <section class="style">
-                        <h2>Style</h2>
-                        <p>Creative, elegant, and flavor-driven dishes with refined presentation.</p>
-                    </section>
+                    <img id="chef-img" src="" alt="">
+                    <div class="chef-profile">
+                        <h1 id="chef-name"><strong>Name:</strong></h1>
+                        <p id="chef-description"><strong>Expertise:</strong></p>
+                        <span class="extra-info">
+                            
+                        </span>
+                    </div>
 
                 </div>
-            </div>
-            
             </div>
             <button class="right-chef-btn"><i class='bx  bx-chevron-right-circle'></i> </button>
 
