--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
     <link rel="icon" href="./food-img/icon.png">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
 </head>
 
 <body id="page-container">
@@ -135,7 +140,7 @@
                         <h1 id="chef-name"><strong>Name:</strong></h1>
                         <p id="chef-description"><strong>Expertise:</strong></p>
                         <span class="extra-info">
-                            
+
                         </span>
                     </div>
 
