--- a/index.html
+++ b/index.html
@@ -31,10 +31,11 @@
         </div>
 
         <ul id="links-container" class="hidden">
-            <li class="nav-links"><a href="top">Home</a></li>
-            <li class="nav-links"><a href="#">About</a></li>
-            <li class="nav-links"><a href="#">Services</a></li>
-            <li class="nav-links"><a href="#">Contact</a></li>
+            <li class="nav-links"><a href="top"> <i class='nav-icons bx  bx-home'  ></i> Home</a></li>
+            <li class="nav-links"><a href="#"> <i class='nav-icons bx  bx-book-library'  ></i> About</a></li>
+            <li class="nav-links"><a href="#"> <i class='nav-icons bx  bx-bowl-bubbles'  ></i> Cuisines</a></li>
+            <li class="nav-links"><a href="#"> <i class='nav-icons bx  bx-truck'  ></i> Services</a></li>
+            <li class="nav-links"><a href="#"> <i class='nav-icons bx  bx-address-book'  ></i> Contact</a></li>
 
             <!-- <span class="socials">
                 <p>fb</p>
