--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
                 the best is what we offer</h1>
         </span> -->
 
-        <button class="slide-btn prev" onclick="changeSlide(-1)" aria-label="Previous Slide">&#10094;</button>
-        <button class="slide-btn next" onclick="changeSlide(1)" aria-label="Next Slide">&#10095;</button>
+        <!-- <button class="slide-btn prev" onclick="changeSlide(-1)" aria-label="Previous Slide">&#10094;</button>
+        <button class="slide-btn next" onclick="changeSlide(1)" aria-label="Next Slide">&#10095;</button> -->
 
         <!-- Dots Indicator -->
         <div class="dots-container" id="dots-container"></div>
