--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
 
         <ul id="links-container" class="hidden">
             <li class="nav-links"><a href="top"> <i class='nav-icons bx  bx-home'></i> Home</a></li>
-            <li class="nav-links"><a href="#"> <i class='nav-icons bx  bx-book-library'></i> About</a></li>
-            <li class="nav-links"><a href="#"> <i class='nav-icons bx  bx-bowl-bubbles'></i> Cuisines</a></li>
-            <li class="nav-links"><a href="#"> <i class='nav-icons bx  bx-truck'></i> Services</a></li>
+            <li class="nav-links"><a href="about.html"> <i class='nav-icons bx  bx-book-library'></i> About</a></li>
+            <li class="nav-links"><a href="#items-container"> <i class='nav-icons bx  bx-bowl-bubbles'></i> Cuisines</a></li>
+            <li class="nav-links"><a href="services.html"> <i class='nav-icons bx  bx-truck'></i> Services</a></li>
             <li class="nav-links"><a href="#"> <i class='nav-icons bx  bx-address-book'></i> Contact</a></li>
 
             <!-- <span class="socials">
@@ -142,11 +142,9 @@
                 <div class="chef-element">
                     <img id="chef-img" src="" alt="">
                     <div class="chef-profile">
-                        <h1 id="chef-name"><strong>Name:</strong></h1>
-                        <p id="chef-description"><strong>Expertise:</strong></p>
-                        <span class="extra-info">
-
-                        </span>
+                        <h1 id="chef-name"></h1>
+                        <p id="chef-description"></strong></p>
+                        <span class="extra-info"></span>
                     </div>
 
                 </div>
