--- a/index.html
+++ b/index.html
@@ -157,54 +157,47 @@
         </div>
     </section>
 
-    <footer>
-        <!-- Contact Section -->
-        <div class="footer-section contact-info">
-            <h3>Contact</h3>
-            <ul>
-                <li><i class="fas fa-phone"></i> 091-3185-3151</li>
-                <li><i class="fas fa-user"></i> Ndiaga Amechi Awkunanaw</li>
-                <li><i class="fas fa-globe"></i> <a href="http://hillsdev22.co.ng"
-                        target="_blank">danibrainy94@gmail.com</a></li>
-            </ul>
-        </div>
-
-        <!-- Navigation -->
-        <div class="footer-section">
-            <h3>Navigate</h3>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">Portfolio</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
-        </div>
-
-        <!-- Menu / Links -->
-        <div class="footer-section">
-            <h3>Menu</h3>
-            <ul>
-                <li><a href="#">Privacy Policy</a></li>
-                <li><a href="#">Terms of Service</a></li>
-                <li><a href="#">Support</a></li>
-                <li><a href="#">FAQ</a></li>
-            </ul>
-        </div>
-
-        <!-- Social Media -->
-        <div class="footer-section">
-            <h3>Follow Us</h3>
-            <div class="social-links">
-                <a href="#"><i class="fab fa-facebook"></i></a>
-                <a href="#"><i class="fab fa-twitter"></i></a>
-                <a href="#"><i class="fab fa-instagram"></i></a>
-                <a href="#"><i class="fab fa-linkedin"></i></a>
-                <a href="#"><i class="fab fa-github"></i></a>
+    <footer class="main-footer" style="background-color: rgb(229, 120, 101);">
+        <div class="footer-content">
+            <div class="footer-col">
+                <h3>Contact</h3>
+                <ul>
+                    <li><i class="fas fa-phone"></i> 091-3185-3151</li>
+                    <li><i class="fas fa-user"></i> Ndiaga Amechi Awkunanaw</li>
+                    <li><i class="fas fa-envelope"></i> <a href="mailto:danibrainy94@gmail.com">danibrainy94@gmail.com</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="footer-col">
+                <h3>Navigate</h3>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Services</a></li>
+                    <li><a href="#">Portfolio</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </div>
+            <div class="footer-col">
+                <h3>Menu</h3>
+                <ul>
+                    <li><a href="#">Privacy Policy</a></li>
+                    <li><a href="#">Terms of Service</a></li>
+                    <li><a href="#">Support</a></li>
+                    <li><a href="#">FAQ</a></li>
+                </ul>
+            </div>
+            <div class="footer-col">
+                <h3>Follow Us</h3>
+                <div class="footer-socials">
+                    <a href="#"><i class="fab fa-facebook-f"></i></a>
+                    <a href="#"><i class="fab fa-twitter"></i></a>
+                    <a href="#"><i class="fab fa-instagram"></i></a>
+                    <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                    <a href="#"><i class="fab fa-github"></i></a>
+                </div>
             </div>
         </div>
-
-        <!-- Footer Bottom Text -->
         <div class="footer-bottom">
             &copy; 2025 hillsdev22. All rights reserved.
         </div>
