--- a/index.html
+++ b/index.html
@@ -19,6 +19,13 @@
 
 <body id="page-container">
 
+    <div class="loader" id="loader">
+        <div>
+            <div class="spinner"></div>
+            <p class="loader-text">Loading...</p>
+        </div>
+    </div>
+
     <nav>
         <div class="hamburger-container">
             <i id="menu-btn" class='bx  bx-menu-left nav-mobile'></i>
@@ -33,7 +40,8 @@
         <ul id="links-container" class="hidden">
             <li class="nav-links"><a href="top"> <i class='nav-icons bx  bx-home'></i> Home</a></li>
             <li class="nav-links"><a href="about.html"> <i class='nav-icons bx  bx-book-library'></i> About</a></li>
-            <li class="nav-links"><a href="#items-container"> <i class='nav-icons bx  bx-bowl-bubbles'></i> Cuisines</a></li>
+            <li class="nav-links"><a href="#items-container"> <i class='nav-icons bx  bx-bowl-bubbles'></i> Cuisines</a>
+            </li>
             <li class="nav-links"><a href="services.html"> <i class='nav-icons bx  bx-truck'></i> Services</a></li>
             <li class="nav-links"><a href="#"> <i class='nav-icons bx  bx-address-book'></i> Contact</a></li>
 
@@ -164,7 +172,8 @@
                 <ul>
                     <li><i class="fas fa-phone"></i> 091-3185-3151</li>
                     <li><i class="fas fa-user"></i> Ndiaga Amechi Awkunanaw</li>
-                    <li><i class="fas fa-envelope"></i> <a href="mailto:danibrainy94@gmail.com">danibrainy94@gmail.com</a>
+                    <li><i class="fas fa-envelope"></i> <a
+                            href="mailto:danibrainy94@gmail.com">danibrainy94@gmail.com</a>
                     </li>
                 </ul>
             </div>
