--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
         <!-- <button class="cart-btn checkout-btn">Checkout</button> -->
         <div class="cart-control-container">
-            <button class="cart-btn-clear">Clear cart</button>
+            <button class="cart-btn-clear">Clear </button>
             <button class="cart-btn-close">Close cart</button>
         </div>
     </section>
