--- a/index.html
+++ b/index.html
@@ -77,10 +77,17 @@
     <section id="cart-items-container" class="cart-items-container">
         <div id="cart-items-wrapper"></div>
 
+        <div>
+            <!-- total price and total number of items -->
+        <div>
+            <span>Total price =  <p id="total-price"></p></span>
+            <span>total items = <p id="total-items">0</p></span>
+        </div>
         <!-- <button class="cart-btn checkout-btn">Checkout</button> -->
         <div class="cart-control-container">
             <button class="cart-btn-clear">Clear </button>
             <button class="cart-btn-close">Close cart</button>
+        </div>
         </div>
     </section>
 
@@ -128,7 +135,7 @@
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, quos!</p>
                 </li>
             </ul>
-            <button class="menu-btn ">View Menu </button>
+            <button class=" services-btn ">View Menu </button>
         </div>
         <div class="attest-img-wrapper">
             <img class="attest-img" src="./food-img/chef-cooking-with-flames-in-modern-kitchen.png" alt="">
