--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
 
         <div>
             <!-- total price and total number of items -->
-        <div>
-            <span>Total price =  <p id="total-price"></p></span>
-            <span>total items = <p id="total-items">0</p></span>
+        <div >
+            <span class="totals">Total price =  &#8358;<p id="total-price"> </p></span>
+            <span class="totals">total items = <p id="total-items"> 0</p></span>
         </div>
         <!-- <button class="cart-btn checkout-btn">Checkout</button> -->
         <div class="cart-control-container">
