--- a/about.html
+++ b/about.html
@@ -61,6 +61,7 @@
         #home-btn {
             all: unset;
             display: block;
+            width: 3em;
             padding: .5em;
             background-color: tomato;
             font-size: 1.3em;
