--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <li class="nav-links"><a href="#items-container"> <i class='nav-icons bx  bx-bowl-bubbles'></i> Cuisines</a>
             </li>
             <li class="nav-links"><a href="services.html"> <i class='nav-icons bx  bx-truck'></i> Services</a></li>
-            <li class="nav-links"><a href="#"> <i class='nav-icons bx  bx-address-book'></i> Contact</a></li>
+            <li class="nav-links"><a href="contact.html"> <i class='nav-icons bx  bx-address-book'></i> Contact</a></li>
 
             <!-- <span class="socials">
                 <p>fb</p>
