--- a/services.html
+++ b/services.html
@@ -94,11 +94,12 @@
         #home-btn {
             all: unset;
             display: inline-block;
+            width: 3em;
             margin: .5em;
             padding: .5em;
             background-color: tomato;
             font-size: 1.3em;
-            border-radius: 24px;
+            border-radius: 14px;
             box-shadow: 4px 4px 8px grey;
 
             a {
@@ -206,9 +207,10 @@
                     <li>Custom dessert orders</li>
                 </ul>
             </div>
+            <button id="home-btn"> <a href="index.html"> Home</a> </button>
         </section>
 
-        <button id="home-btn"> <a href="index.html"> Home</a> </button>
+        
     </main>
 
     
