--- a/index.html
+++ b/index.html
@@ -79,9 +79,12 @@
 
         <div>
             <!-- total price and total number of items -->
-        <div >
+        <div>
             <span class="totals">Total price =  &#8358;<p id="total-price"> </p></span>
             <span class="totals">total items = <p id="total-items"> 0</p></span>
+        </div>
+        <div>
+            <!-- <button class="checkout all-button">Ckeckout</button> -->
         </div>
         <!-- <button class="cart-btn checkout-btn">Checkout</button> -->
         <div class="cart-control-container">
